# EnvForage

./: .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml  report.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  issue-assignment-watchdog.yml  pr-label-manager.yml  release.yml
backend/: pyproject.toml  test_bug.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: cache.py  config.py  main.py
backend/app/ai/: models.py  service.py
backend/app/ai/prompts/: system.py  troubleshoot.py
backend/app/ai/providers/: base.py  mock.py  openai.py  openrouter.py
backend/app/api/v1/: authentication.py  diagnose.py  profiles.py  scripts.py  troubleshoot.py  verify.py
backend/app/compatibility/: models.py  resolver.py
backend/app/compatibility/matrix/: cuda.py  os_rules.py  python.py  python_matrix_data.json  rocm.py
backend/app/core/: exceptions.py  handlers.py
backend/app/middleware/: rate_limit.py
backend/app/models/: diagnostic.py
backend/app/schemas/: diagnostic.py  profile.py  script.py  verify.py
backend/app/services/: profile_service.py  repair_service.py  script_service.py
backend/app/templates/: engine.py  models.py  safety.py
backend/app/templates/jinja/config/: docker-compose.yml.j2  environment.yml.j2  makefile.j2
backend/app/templates/jinja/verify/: verify_tf.sh.j2
backend/scripts/: fetch_pypi_metadata.py  update_python_matrix.py  validate_profiles.py
backend/seeds/: profiles.yaml  rocm_matrix.yaml
backend/tests/: test_rocm_matrix.py
backend/tests/integration/: test_ai_pipeline.py
backend/tests/unit/: test_seed_service.py  test_verify_parse_output.py
backend/tests/unit/ai/: test_models.py  test_ollama_provider.py  test_openai_provider.py  test_rate_limit.py  test_repair_service.py  test_service.py
backend/tests/unit/compatibility/: test_resolver.py
backend/tests/unit/services/: test_script_service_cache.py
backend/tests/unit/templates/: test_conda_template.py  test_custom_templates.py  test_pyproject_template.py
cli/: README.md
cli/envforge_agent/: cli.py  report.py  schemas.py  utils.py
cli/envforge_agent/audit/: sources.py
cli/envforge_agent/detectors/: __init__.py  cuda_detector.py  gpu_detector.py  os_detector.py  python_detector.py  rocm_detector.py
cli/tests/: test_agent.py  test_audit.py  test_fix.py
docs/: CLI_REFERENCE.md  COMPATIBILITY_ENGINE.md  FEATURES.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/coming-soon/: page.tsx
frontend/src/app/components/: CurrentYear.tsx  Footer.tsx  Navbar.tsx
frontend/src/app/diagnose/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/troubleshoot/: page.tsx
frontend/src/components/: TerminalLoader.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+1 files in other folders)
